# fakefinder_nanobananapro

./: .gitignore  README.md  download_dataset_images.py  evaluate_model.py  fakefinder.py  finetune_midjourney_dalle_sd.py  finetune_nanobananapro.py  finetuning_nanobananapro.py  inference.py  inference_api.py  inference_check_fulldataset.py  inference_full_test_dataset.py  pyproject.toml  test_fulldataset_images.py  train.py
chrome-extension/: README.md  manifest.json  popup.css  popup.html  popup.js
chrome-extension/icons/: README.md
utils/: data.py  helper_utils.py  training.py  unittests.py  unittests_utils.py  visualization.py
