[project]
name = "fake-image-finder"
version = "0.1.0"
description = "Fake AI image finder fake/real utilisant MobileNetV3"
authors = [
    {name = "julienlucas", email = "contact@julienlucas.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch==2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "ipython>=9.7.0,<10.0.0",
    "pandas>=2.3.3,<3.0.0",
    "dlai-grader>=2.1.0,<3.0.0",
    "torchvision>=0.17.0,<0.18.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "requests>=2.32.5,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "directory-tree>=1.0.0,<2.0.0",
    "fastai==2.7.16",
    "torchmetrics>=1.8.2,<2.0.0",
    "optuna>=4.6.0,<5.0.0",
    "ipywidgets>=8.1.8,<9.0.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.14.3",
    "selenium>=4.39.0",
]

